# CodeVolumeReflection

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/ClassesAndObjects/: CMakeLists.txt  car.cpp  car.h  car_main.cpp
src/PointAndSmartPoint/: CMakeLists.txt  menmory_management.cpp  pointers.cpp  smart_point.cpp
